<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground"
    tools:context=".NewFarmer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regFarmer"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradientbackground2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fullnam"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <Spinner
                android:id="@+id/gendr"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:entries="@array/gender"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <EditText
                android:id="@+id/idTyp"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/idType"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <EditText
                android:id="@+id/idNum"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/idNum"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>

            <AutoCompleteTextView
                android:id="@+id/stat"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/state"
                android:layout_gravity="center"
                android:inputType="textCapCharacters"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <AutoCompleteTextView
                android:id="@+id/lg"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/localGovt"
                android:layout_gravity="center"
                android:inputType="textCapWords"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <AutoCompleteTextView
                android:id="@+id/bank"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/bankName"
                android:layout_gravity="center"
                android:inputType="textCapCharacters"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <EditText
                android:id="@+id/account"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/accountNum"
                android:inputType="number"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <EditText
                android:id="@+id/bvn"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/bvn"
                android:inputType="number"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>

            <EditText
                android:id="@+id/fmSz"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/farmSz"
                android:inputType="number"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>

            <Spinner
                android:id="@+id/crps"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/crops"
                android:entries="@array/cropTyp"
                android:layout_gravity="center"
                android:inputType="textCapWords"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>

            <AutoCompleteTextView
                android:id="@+id/grpCop"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/grpCoorp"
                android:layout_gravity="center"
                android:inputType="textCapWords"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <AutoCompleteTextView
                android:id="@+id/grpRole"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:hint="@string/grpRole"
                android:layout_gravity="center"
                android:inputType="textCapWords"
                android:textSize="17sp"
                android:dropDownHeight="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <!--EditText
                android:id="@+id/pic"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pic"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <!--android:visibility="gone"-->

            <Button
                android:id="@+id/choseImg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#3552e5"
                android:text="@string/choseImg"
                android:onClick="onClick"/>
            <!--android:enabled="true"-->
            </LinearLayout>

            <TextView
                android:id="@+id/gps"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/gps"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <TextView
                android:id="@+id/gpsAddr"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/gps"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/edittextdrawable"/>
            <TextView
                android:id="@+id/textViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="1"
                android:visibility="gone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:background="#E53935"
                android:text="@string/regFarmer"
                android:onClick="onClick"/>


        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</LinearLayout>